--- a/package.json
+++ b/package.json
@@ -4,12 +4,30 @@
   "main": "index.js",
   "author": "Meijiao Png <meijiao@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "ts-node src/index.ts",
+    "start-with-test-validator": "start-server-and-test 'solana-test-validator --reset --quiet' http://localhost:8899/health start",
+    "lint": "eslint --ext .ts src/* && prettier --check \"src/**/*.ts\"",
+    "lint:fix": "eslint --ext .ts src/* --fix && prettier --write \"src/**/*.ts\"",
+    "pretty": "prettier --write '{,src/**/}*.ts'"
+  },
   "dependencies": {
-    "@solana/web3.js": "^1.36.0",
+    "@solana/spl-token": "^0.2.0",
+    "@solana/web3.js": "^1.36.0"
+  },
+  "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
-    "ts-node": "^10.6.0",
-    "tsconfig": "^7.0.0",
-    "typescript": "^4.6.2"
+    "@types/eslint": "^8.2.2",
+    "@types/eslint-plugin-prettier": "^3.1.0",
+    "@types/prettier": "^2.1.5",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.1.2",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.0.5"
   },
   "engines": {
     "node": ">=14.0.0"
