--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "moduleResolution": "node",
     "module": "es2015"
   },
-  "include": ["src/client/**/*"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
